--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@ title: Home
     <span class="home-top"></span>
     <span class="home-title">Hi! I'm Ashley</span>
     <span class="home-subtitle">I study biomedical engineering at Yale ('22). Looking for ways to leverage tech, data, and design for good.</span>
-    <p class="home-blurb">Share anything in common? <a href="mailto:daniel@danielzhao.com"><strong>Let's chat→</strong></a>.</p>
+    <a href="mailto:ashleyelaineqin@gmail.com"><strong>Let's get in touch</strong></a></p>
 
     <span class="home-bottom"></span>
 </div>
-<div class="full">
-    <img src="media/DZ_20180612_2116_2419.jpg" class="home-image">
-</div>
+
 <div class="wide sep"><strong>Projects</strong></div>
     <br>
-    <p><a href="/colophon/"><strong>See what this website is built with →</strong></a></p>
 </div>
