--- a/index.html
+++ b/index.html
@@ -4,15 +4,40 @@ title: Home
 ---
 
 <div class="wide">
-    <img id="bio-prof-pic" src="/media/profile.jpg">
+    <img id="bio-prof-pic" style="max-width: 100%; filter: drop-shadow(10px 10px 10px silver);" src="/media/profile.jpg">
     <span class="home-top"></span>
     <span class="home-title">Hi! I'm Ashley</span>
-    <span class="home-subtitle">I study biomedical engineering at Yale ('22). Looking for ways to leverage tech, data, and design for good.</span>
+    <h2 class="mt-4" style="font-family: 'univers_45_lightregular';">
+        I study biomedical engineering at Yale ('22). Looking for ways to leverage tech, data, and design for good.
+    </h2>
+    <!--<span class="home-subtitle">I study biomedical engineering at Yale ('22). Looking for ways to leverage tech, data, and design for good.</span> -->
     <a href="mailto:ashleyelaineqin@gmail.com"><strong>Let's get in touch</strong></a></p>
 
     <span class="home-bottom"></span>
 </div>
 
-<div class="wide sep"><strong>Projects</strong></div>
-    <br>
+
+<div class="wide sep"><strong>      Projects</strong></div>
+<br>
+<!--HiveDesk -->
+<div class="card grid" style="margin-bottom: -24px;/* background-color: #f05a1a; *//* filter: drop-shadow(0px -5px 10px silver); */">
+    <div class="one mt-3 mb-3" style="padding: 60px 0px;margin: auto auto auto 128px;width: 50%;">
+        <p style="margin-top: 0">
+            <a href="/rerent"><img src="/media/profile.jpg" alt="rerent" style="max-width:300px;"></a>
+        </p>
+        <h5>Summer 2020</h5><br>
+        Lorem Ipsum
+        <br>
+        <br>
+        <button onclick="window.location.href = 'https://bricebai.com/hivedesk';" class="h6" style="">Read more &gt;</button>
+        <br>
+        <br>
+        <small class="h6"><b class="boldbasier">Tools</b> &nbsp;&nbsp;&nbsp;Figma, Invision, FlowMapp<br></small>
+    </div>
+
+    <div class="two" style="display: flex; align-items: center;">
+        <a href="/rerent"><img src="/media/profile.jpg" alt="rerent" style="filter: drop-shadow(0px 1px 5px silver);"></a>
+    </div><br>
 </div>
+</div>
+
