--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: Home
 </div>
 
 
-<div class="wide sep"><strong>      Projects</strong></div>
+<div id="portfolio" class="wide sep"><strong>      Projects</strong></div>
 <br>
 <!--HiveDesk -->
 <div class="card grid" style="margin-bottom: -24px;/* background-color: #f05a1a; *//* filter: drop-shadow(0px -5px 10px silver); */">
@@ -32,7 +32,7 @@ title: Home
         <button onclick="window.location.href = 'https://bricebai.com/hivedesk';" class="h6" style="">Read more &gt;</button>
         <br>
         <br>
-        <small class="h6"><b class="boldbasier">Tools</b> &nbsp;&nbsp;&nbsp;Figma, Invision, FlowMapp<br></small>
+        <small class="h6"><b class="boldbasier">Tools</b> &nbsp;&nbsp;&nbsp;Figma, Illustrator, FlowMapp<br></small>
     </div>
 
     <div class="two" style="display: flex; align-items: center;">
