--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@ title: Home
 </div>
 
 
-<div id="portfolio" class="wide sep"><strong>      Projects</strong></div>
+<div id="projects" class="wide sep"><strong>      Product Design/Development</strong></div>
 <br>
-<!--HiveDesk -->
+<!--ReRent -->
 <div class="card grid" style="margin-bottom: -24px;/* background-color: #f05a1a; *//* filter: drop-shadow(0px -5px 10px silver); */">
     <div class="one mt-3 mb-3" style="padding: 60px 0px;margin: auto auto auto 128px;width: 50%;">
         <p style="margin-top: 0">
@@ -38,6 +38,5 @@ title: Home
     <div class="two" style="display: flex; align-items: center;">
         <a href="/rerent"><img src="/media/profile.jpg" alt="rerent" style="filter: drop-shadow(0px 1px 5px silver);"></a>
     </div><br>
-</div>
 </div>
 
