--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 layout: default
 title: Home
 ---
+<nav>
+    <a href="/about">about</a>
+    <a href="/media/Qin_Resume.pdf">resume</a>
+    <a href="#projects">projects</a>
+</nav>
+
 
 <div class="wide">
     <img id="bio-prof-pic" style="max-width: 100%; filter: drop-shadow(10px 10px 10px silver);" src="/media/profile.jpg">
