--- a/index.html
+++ b/index.html
@@ -1,30 +1,25 @@
 ---
-
+layout: default
 title: Home
 ---
-<header>
-    <nav>
-        <a href="/about">about</a>
-        <a href="/media/Qin_Resume.pdf">resume</a>
-        <a href="#projects">projects</a>
-    </nav>
-</header>
 
 <div class="wide">
     <img id="bio-prof-pic" style="max-width: 100%; filter: drop-shadow(10px 10px 10px silver);" src="/media/profile.jpg">
     <span class="home-top"></span>
     <span class="home-title">Hi! I'm Ashley</span>
+    <!--
     <h2 class="mt-4" style="font-family: 'univers_45_lightregular';">
         I study biomedical engineering at Yale ('22). Looking for ways to leverage tech, data, and design for good.
     </h2>
-    <!--<span class="home-subtitle">I study biomedical engineering at Yale ('22). Looking for ways to leverage tech, data, and design for good.</span> -->
+    -->
+    <span class="home-subtitle">I study biomedical engineering at Yale ('22). Looking for ways to leverage tech, data, and design for good.</span>
     <a href="mailto:ashleyelaineqin@gmail.com"><strong>Let's get in touch</strong></a></p>
 
     <span class="home-bottom"></span>
 </div>
 
 
-<div id="projects" class="wide sep"><strong>      Product Design/Development</strong></div>
+<div id="projects" class="wide sep"><strong>Product Design/Development</strong></div>
 <br>
 <!--ReRent -->
 <div class="card grid" style="margin-bottom: -24px;/* background-color: #f05a1a; *//* filter: drop-shadow(0px -5px 10px silver); */">
@@ -36,7 +31,7 @@ title: Home
         Lorem Ipsum
         <br>
         <br>
-        <button onclick="window.location.href = 'https://bricebai.com/hivedesk';" class="h6" style="">Read more &gt;</button>
+        <button onclick="window.location.href = 'https://bricebai.com/hivedesk';" class="h6">Read more</button>
         <br>
         <br>
         <small class="h6"><b class="boldbasier">Tools</b> &nbsp;&nbsp;&nbsp;Figma, Illustrator, FlowMapp<br></small>
