reformatting home page

--- a/index.html
+++ b/index.html
@@ -6,12 +6,8 @@ title: Home
 <div class="wide">
     <img id="bio-prof-pic" style="max-width: 100%; filter: drop-shadow(10px 10px 10px silver);" src="/media/profile.jpg">
     <span class="home-top"></span>
-    <span class="home-title">Hi! I'm Ashley</span>
-    <!--
-    <h2 class="mt-4" style="font-family: 'univers_45_lightregular';">
-        I study biomedical engineering at Yale ('22). Looking for ways to leverage tech, data, and design for good.
-    </h2>
-    -->
+    <span class="home-title1">HELLO!</span>
+    <span class="home-title2">I'm Ashley</span>
     <span class="home-subtitle">I study biomedical engineering at Yale ('22). Looking for ways to leverage tech, data, and design for good.</span>
     <a href="mailto:ashleyelaineqin@gmail.com"><strong>Let's get in touch</strong></a></p>
 
