--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,7 @@ layout: default
     <div class="prose mb-4 py-2">
         <div style="display: grid;grid-template-columns: 40% 47%;grid-column-gap: 40px;">
             <p>
-                Lorem Ipsum
+                At Yale, I'm most involved with the Yale Daily News as a data analyst and staff reporter.
                 <br><br>
                 Lorem Ipsum
             </p>
