--- a/index.html
+++ b/index.html
@@ -6,18 +6,25 @@ title: Home
 <div class="wide">
     <img id="bio-prof-pic" style="max-width: 100%; filter: drop-shadow(10px 10px 10px silver);" src="/media/profile.jpg">
     <span class="home-top"></span>
-    <span class="home-title1">HELLO!</span>
-    <span class="home-title2">I'm Ashley</span>
-    <span class="home-subtitle">I study biomedical engineering at Yale ('22). Looking for ways to leverage tech, data, and design for good.</span>
-    <a href="mailto:ashleyelaineqin@gmail.com"><strong>Let's get in touch</strong></a></p>
-
+    <span class="home-title1">HI!</span>
+    <span class="home-title2">I'm Ashley
+        <span style = "color: #0083ff; font-weight: bold">
+            ,
+        </span>
+    </span>
+    <span class="home-subtitle">developer, researcher, and bioengineering student at Yale. Passionate about using the power of data and technology to promote equity.</span>
+    <a href="mailto:ashleyelaineqin@gmail.com"><strong>Let's get in touch</strong></a>
     <span class="home-bottom"></span>
 </div>
 
 
-<div id="projects" class="wide sep"><strong>Product Design/Development</strong></div>
-<br>
 <!--ReRent -->
+<div id="projects" class="wide sep">
+    <p>
+        <strong>Product Management | Software Development</strong>
+    </p>
+</div>
+<br>
 <div class="card grid" style="margin-bottom: -24px;/* background-color: #f05a1a; *//* filter: drop-shadow(0px -5px 10px silver); */">
     <div class="one mt-3 mb-3" style="padding: 60px 0px;margin: auto auto auto 128px;width: 50%;">
         <p style="margin-top: 0">
