--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@ title: Home
 ---
 
 <div class="wide">
-    <img id="bio-prof-pic" style="max-width: 100%; filter: drop-shadow(10px 10px 10px silver);" src="/media/profile.jpg">
+    <img id="bio-prof-pic" style="max-width: 60%; filter: drop-shadow(10px 10px 10px silver);" src="/media/profile.jpg">
     <span class="home-top"></span>
-    <span class="home-title1">HI!</span>
+    <span class="home-title1">HI</span>
     <span class="home-title2">I'm Ashley
         <span style = "color: #0083ff; font-weight: bold">
             ,
         </span>
     </span>
-    <span class="home-subtitle">developer, researcher, and bioengineering student at Yale. Passionate about using the power of data and technology to promote equity.</span>
+    <span class="home-subtitle">developer, researcher, and bioengineering student at Yale. Passionate about promoting equity with the power of data and technology.</span>
     <a href="mailto:ashleyelaineqin@gmail.com"><strong>Let's get in touch</strong></a>
     <span class="home-bottom"></span>
 </div>
