--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@ layout: default
 title: Home
 ---
 
-<div class="wide">
-    <img id="bio-prof-pic" style="max-width: 60%; filter: drop-shadow(10px 10px 10px silver);" src="/media/profile.jpg">
+<div class="wide" style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
     <span class="home-top"></span>
     <span class="home-title1">HI</span>
     <span class="home-title2">I'm Ashley
@@ -15,6 +14,7 @@ title: Home
     <span class="home-subtitle">developer, researcher, and bioengineering student at Yale. Passionate about promoting equity with the power of data and technology.</span>
     <a href="mailto:ashleyelaineqin@gmail.com"><strong>Let's get in touch</strong></a>
     <span class="home-bottom"></span>
+    <img id="bio-prof-pic" style="max-width: 60%; filter: drop-shadow(10px 10px 10px silver);" src="/media/profile.jpg">
 </div>
 
 
