--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Home
 <div class="wide" style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
     <span class="home-top"></span>
     <span class="home-title1">HI</span>
-    <span class="home-title2">I'm Ashley
+    <br><span class="home-title2">I'm Ashley
         <span style = "color: #0083ff; font-weight: bold">
             ,
         </span>
