--- a/index.html
+++ b/index.html
@@ -3,18 +3,23 @@ layout: default
 title: Home
 ---
 
-<div class="wide" style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
-    <span class="home-top"></span>
-    <span class="home-title1">HI</span>
-    <br><span class="home-title2">I'm Ashley
-        <span style = "color: #0083ff; font-weight: bold">
-            ,
-        </span>
-    </span>
-    <span class="home-subtitle">developer, researcher, and bioengineering student at Yale. Passionate about promoting equity with the power of data and technology.</span>
-    <a href="mailto:ashleyelaineqin@gmail.com"><strong>Let's get in touch</strong></a>
-    <span class="home-bottom"></span>
-    <img id="bio-prof-pic" style="max-width: 60%; filter: drop-shadow(10px 10px 10px silver);" src="/media/profile.jpg">
+<!--<div class="wide" style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">-->
+<div class="card container mx-auto px-2 mb-4 clearfix header-text">
+    <div class="subheader mt-1 py-2" style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
+        <div style="width: 30em; margin-bottom:3em;">
+            <span class="home-top"></span>
+            <span class="home-title1">HI</span>
+            <br><span class="home-title2">I'm Ashley
+                <span style = "color: #0083ff; font-weight: bold">
+                    —
+                </span>
+            </span>
+            <span class="home-subtitle">developer, researcher, and bioengineering student at Yale. Passionate about promoting equity with the power of data and technology.</span>
+            <img id="bio-prof-pic" style="max-width: 60%; filter: drop-shadow(10px 10px 10px silver);" src="/media/profile.jpg">
+            <a href="mailto:ashleyelaineqin@gmail.com"><strong>Let's get in touch</strong></a>
+            <span class="home-bottom"></span>
+        </div>
+    </div>
 </div>
 
 
