--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 layout: default
 title: Home
 ---
-
-<div class="wide" style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
+<div class="wide" style="display: flex;align-items: center;flex-flow: wrap; justify-content:right;">
+    <img id="bio-prof-pic" style="max-width: 60%; filter: drop-shadow(10px 10px 10px silver);" src="/media/profile.jpg">
+</div>
+<div class="wide" style="display: flex;align-items: center;flex-flow: wrap; justify-content:left;">
     <span class="home-top"></span>
     <span class="home-title1">HI</span>
     <br><span class="home-title2">I'm Ashley
@@ -12,7 +14,6 @@ title: Home
     </span>
     </span>
     <span class="home-subtitle">developer, researcher, and bioengineering student at Yale. Passionate about promoting equity with the power of data and technology.</span>
-    <img id="bio-prof-pic" style="max-width: 60%; filter: drop-shadow(10px 10px 10px silver);" src="/media/profile.jpg">
     <a href="mailto:ashleyelaineqin@gmail.com"><strong>Let's get in touch</strong></a>
     <span class="home-bottom"></span>
 </div>
