--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 layout: default
 title: Home
 ---
-<div class="wide" style="display: flex;align-items: center;flex-flow: wrap; justify-content:right;">
-    <img id="bio-prof-pic" style="max-width: 60%; filter: drop-shadow(10px 10px 10px silver);" src="/media/profile.jpg">
-</div>
 <div class="wide" style="display: flex;align-items: center;flex-flow: wrap; justify-content:left;">
     <span class="home-top"></span>
     <span class="home-title1">HI</span>
@@ -14,6 +11,7 @@ title: Home
     </span>
     </span>
     <span class="home-subtitle">developer, researcher, and bioengineering student at Yale. Passionate about promoting equity with the power of data and technology.</span>
+    <img id="bio-prof-pic" style="max-width: 60%; filter: drop-shadow(10px 10px 10px silver); align: left;" src="/media/profile.jpg">
     <a href="mailto:ashleyelaineqin@gmail.com"><strong>Let's get in touch</strong></a>
     <span class="home-bottom"></span>
 </div>
