--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Home
     </span>
     </span>
     <span class="home-subtitle">developer, researcher, and bioengineering student at Yale. Passionate about promoting equity with the power of data and technology.</span>
-    <img id="bio-prof-pic" style="max-width: 60%; filter: drop-shadow(10px 10px 10px silver); align: left;" src="/media/profile.jpg">
+    <img id="bio-prof-pic" style="max-width: 60%; filter: drop-shadow(10px 10px 10px silver); align: right;" src="/media/profile.jpg">
     <a href="mailto:ashleyelaineqin@gmail.com"><strong>Let's get in touch</strong></a>
     <span class="home-bottom"></span>
 </div>
