--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@ title: Home
 ---
 <div class="wide" style="display: flex;align-items: center;flex-flow: wrap; justify-content:left;">
     <span class="home-top"></span>
-    <span class="home-title1">Hi!</span>
-    <br><span class="home-title2">I'm Ashley
+    <span class="home-title1">hello!</span><br>
+    <span class="home-title2">I'm Ashley
         <span style="color: #0083ff; font-weight: bold">
             —
         </span>
     </span>
-    <span class="home-subtitle">developer, researcher, and bioengineering student at Yale. Passionate about promoting equity with the power of data and technology.</span>
+    <span class="home-subtitle">developer, researcher, and bioengineering student at Yale. Passionate about using data to build products and promote equity.</span>
     <img id="bio-prof-pic" align="right" style="max-width: 60%; filter: drop-shadow(10px 10px 10px silver);"
          src="/media/profile.jpg">
     <a href="mailto:ashleyelaineqin@gmail.com"><strong>Let's get in touch</strong></a>
