--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@ title: Home
             —
         </span>
     </span>
-    <span class="home-subtitle">developer, researcher, and bioengineering student at Yale. Passionate about using data to build products and promote equity.</span>
-    <img id="bio-prof-pic" align="right" style="max-width: 60%; filter: drop-shadow(10px 10px 10px silver);"
+    <img id="bio-prof-pic" style="max-width: 60%; filter: drop-shadow(10px 10px 10px silver);"
          src="/media/profile.jpg">
+    <span class="home-subtitle">developer, researcher, and bioengineering student at Yale. Passionate about using data to build products and promote equity.</span>
     <a href="mailto:ashleyelaineqin@gmail.com"><strong>Let's get in touch</strong></a>
     <span class="home-bottom"></span>
 </div>
