Revert "Update index.html"
This reverts commit c4c00aaa1ad6ed0f4a9c596e0edd875e823709d5.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@ layout: default
 title: Home
 ---
 <div class="wide" style="display: flex;align-items: center;flex-flow: wrap; justify-content:left;">
-<!--    <span class="home-top"></span>-->
-    <span class="home-title1">hello!</span>
+    <span class="home-top"></span>
+    <p>
+        <span class="home-title1">hello!</span>
+    </p>
     <span class="home-title2">I'm Ashley
+<!--        <span style="color: #0083ff; font-weight: bold">-->
         <span class="blue" style="font-weight: bold">
             —
         </span>
