Updating index.html

--- a/index.html
+++ b/index.html
@@ -4,50 +4,67 @@ title: Home
 ---
 <div class="wide" style="display: flex;align-items: center;flex-flow: wrap; justify-content:left;">
     <span class="home-top"></span>
-    <p>
-        <span class="home-title1">hello!</span>
-    </p>
+    <img id="bio-prof-pic" src="/media/profile.jpg">
+    <span class="home-subtitle">hello!</span>
     <span class="home-title2">I'm Ashley
-<!--        <span style="color: #0083ff; font-weight: bold">-->
         <span class="blue" style="font-weight: bold">
             —
         </span>
     </span>
     <span class="home-subtitle">developer, researcher, and bioengineering student at Yale. Passionate about using data to build products and promote equity.</span>
-    <img id="bio-prof-pic" align="right" style="max-width: 60%; filter: drop-shadow(10px 10px 10px silver);"
-         src="/media/profile.jpg">
     <a href="mailto:ashleyelaineqin@gmail.com"><strong>Let's get in touch</strong></a>
     <span class="home-bottom"></span>
 </div>
 
+<div id="portfolio" class="mx-auto mb-0 clearfix header-text" style="max-width: 80em;">
+    <!--AWS -->
+    <div class="card grid">
+        <div class="one mt-3 mb-3">
+            <p style="margin-right: 5em;">
+                <a href="/aws2020"><img src="/media/rerent_mockup.png" alt="aws" style="max-width:300px;"></a>
+            </p>
+            <h5>12-Week Internship</h5><br>An internship with Amazon Web Services under AWS Support. Redesigned the
+            entire web console of cloud optimization B2B SaaS Tool AWS Trusted Advisor aiming to address current needs
+            and pain points for 90,000+ customers.
+            <br>
+            <br>
+            <button onclick="window.location.href = 'https://bricebai.com/aws2020';" class="h6">Read more</button>
+            <br>
+            <br>
+        </div>
 
-<!--ReRent -->
-<div id="projects" class="wide sep">
-    <p>
-        <strong>Product Management | Software Development</strong>
-    </p>
-</div>
-<br>
-<div class="card grid"
-     style="margin-bottom: -24px;/* background-color: #f05a1a; *//* filter: drop-shadow(0px -5px 10px silver); */">
-    <div class="one mt-3 mb-3" style="padding: 60px 0px;margin: auto auto auto 128px;width: 50%;">
-        <p style="margin-top: 0">
-            <a href="/rerent"><img src="/media/profile.jpg" alt="rerent" style="max-width:300px;"></a>
-        </p>
-        <h5>Summer 2020</h5><br>
-        Lorem Ipsum
+        <div class="two">
+            <a href="/aws2020"><img src="/media/rerent_mockup.png" alt="aws"
+                                    style="filter: drop-shadow(0px 1px 5px silver);"></a>
+        </div>
         <br>
-        <br>
-        <button onclick="window.location.href = 'https://bricebai.com/hivedesk';" class="h6">Read more</button>
-        <br>
-        <br>
-        <small class="h6"><b class="boldbasier">Tools</b> &nbsp;&nbsp;&nbsp;Figma, Illustrator, FlowMapp<br></small>
     </div>
+</div>
 
-    <div class="two" style="display: flex; align-items: center;">
-        <a href="/rerent"><img src="/media/profile.jpg" alt="rerent"
-                               style="filter: drop-shadow(0px 1px 5px silver);"></a>
+    <!--ReRent -->
+    <!--<div id="projects" class="wide sep">
+        <a href="/rerent"><img src="/media/rerent_mockup.png" alt="rerent" align="right" style="max-width:600px;"></a>
+        <p style="margin-top: 1em;">
+            <strong>Product Management | Software Development</strong>
+        </p>
     </div>
     <br>
-</div>
+    <div class="card grid" style="margin-bottom: -24px;">
+        <div class="one mt-3 mb-3" style="padding: 60px 0px;margin: auto auto auto 128px;width: 50%;">
+            <h5>Summer 2020</h5><br>
+            Lorem Ipsum
+            <br>
+            <br>
+            <button onclick="window.location.href = 'https://bricebai.com/hivedesk';" class="h6">Read more</button>
+            <br>
+            <br>
+            <small class="h6"><b class="boldbasier">Tools</b> &nbsp;&nbsp;&nbsp;Figma, Illustrator, FlowMapp<br></small>
+        </div>
+
+        <div class="two" style="display: flex; align-items: center;">
+            <a href="/rerent"><img src="/media/profile.jpg" alt="rerent"
+                                   style="filter: drop-shadow(0px 1px 5px silver);"></a>
+        </div>
+        <br>
+    </div>-->
 
