--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 ---
 <div class="wide" style="display: flex;align-items: center;flex-flow: wrap; justify-content:left;">
     <span class="home-top"></span>
-    <img id="bio-prof-pic" src="/media/profile.jpg">
+<!--    <img id="bio-prof-pic" src="/media/profile.jpg">-->
     <span class="home-subtitle">hello!</span>
     <span class="home-title2">I'm Ashley
         <span class="blue" style="font-weight: bold">
@@ -16,8 +16,8 @@ title: Home
     <span class="home-bottom"></span>
 </div>
 
-<div id="portfolio" class="mx-auto mb-0 clearfix header-text" style="max-width: 80em;">
-    <!--AWS -->
+<!--<div id="portfolio" class="mx-auto mb-0 clearfix header-text" style="max-width: 80em;">
+    &lt;!&ndash;AWS &ndash;&gt;
     <div class="card grid">
         <div class="one mt-3 mb-3">
             <p style="margin-right: 5em;">
@@ -39,32 +39,32 @@ title: Home
         </div>
         <br>
     </div>
-</div>
+</div>-->
 
-    <!--ReRent -->
-    <!--<div id="projects" class="wide sep">
-        <a href="/rerent"><img src="/media/rerent_mockup.png" alt="rerent" align="right" style="max-width:600px;"></a>
-        <p style="margin-top: 1em;">
-            <strong>Product Management | Software Development</strong>
-        </p>
+<!--ReRent -->
+<div id="projects" class="wide sep">
+    <a href="/rerent"><img src="/media/rerent_mockup.png" alt="rerent" align="right" style="max-width:600px;"></a>
+    <p style="margin-top: 1em;">
+        <strong>Product Management | Software Development</strong>
+    </p>
+</div>
+<br>
+<div class="card grid" style="margin-bottom: -24px;">
+    <div class="one mt-3 mb-3" style="padding: 60px 0px;margin: auto auto auto 128px;width: 50%;">
+        <h5>Summer 2020</h5><br>
+        Lorem Ipsum
+        <br>
+        <br>
+        <button onclick="window.location.href = 'https://bricebai.com/hivedesk';" class="h6">Read more</button>
+        <br>
+        <br>
+        <small class="h6"><b class="boldbasier">Tools</b> &nbsp;&nbsp;&nbsp;Figma, Illustrator, FlowMapp<br></small>
+    </div>
+
+    <div class="two" style="display: flex; align-items: center;">
+        <a href="/rerent"><img src="/media/profile.jpg" alt="rerent"
+                               style="filter: drop-shadow(0px 1px 5px silver);"></a>
     </div>
     <br>
-    <div class="card grid" style="margin-bottom: -24px;">
-        <div class="one mt-3 mb-3" style="padding: 60px 0px;margin: auto auto auto 128px;width: 50%;">
-            <h5>Summer 2020</h5><br>
-            Lorem Ipsum
-            <br>
-            <br>
-            <button onclick="window.location.href = 'https://bricebai.com/hivedesk';" class="h6">Read more</button>
-            <br>
-            <br>
-            <small class="h6"><b class="boldbasier">Tools</b> &nbsp;&nbsp;&nbsp;Figma, Illustrator, FlowMapp<br></small>
-        </div>
-
-        <div class="two" style="display: flex; align-items: center;">
-            <a href="/rerent"><img src="/media/profile.jpg" alt="rerent"
-                                   style="filter: drop-shadow(0px 1px 5px silver);"></a>
-        </div>
-        <br>
-    </div>-->
+</div>
 
