--- a/index.html
+++ b/index.html
@@ -5,45 +5,21 @@ title: Home
 <div class="wide" style="display: flex;align-items: center;flex-flow: wrap; justify-content:left;">
     <span class="home-top"></span>
 <!--    <img id="bio-prof-pic" src="/media/profile.jpg">-->
-    <span class="home-subtitle">hello!</span>
+    <span class="home-title1">hello!  </span>
     <span class="home-title2">I'm Ashley
         <span class="blue" style="font-weight: bold">
             —
         </span>
     </span>
     <span class="home-subtitle">developer, researcher, and bioengineering student at Yale. Passionate about using data to build products and promote equity.</span>
-    <a href="mailto:ashleyelaineqin@gmail.com"><strong>Let's get in touch</strong></a>
+    <a href="mailto:ashleyelaineqin@gmail.com" style="margin-left: 6em"><strong>Let's get in touch</strong></a>
     <span class="home-bottom"></span>
 </div>
 
-<!--<div id="portfolio" class="mx-auto mb-0 clearfix header-text" style="max-width: 80em;">
-    &lt;!&ndash;AWS &ndash;&gt;
-    <div class="card grid">
-        <div class="one mt-3 mb-3">
-            <p style="margin-right: 5em;">
-                <a href="/aws2020"><img src="/media/rerent_mockup.png" alt="aws" style="max-width:300px;"></a>
-            </p>
-            <h5>12-Week Internship</h5><br>An internship with Amazon Web Services under AWS Support. Redesigned the
-            entire web console of cloud optimization B2B SaaS Tool AWS Trusted Advisor aiming to address current needs
-            and pain points for 90,000+ customers.
-            <br>
-            <br>
-            <button onclick="window.location.href = 'https://bricebai.com/aws2020';" class="h6">Read more</button>
-            <br>
-            <br>
-        </div>
-
-        <div class="two">
-            <a href="/aws2020"><img src="/media/rerent_mockup.png" alt="aws"
-                                    style="filter: drop-shadow(0px 1px 5px silver);"></a>
-        </div>
-        <br>
-    </div>
-</div>-->
 
 <!--ReRent -->
 <div id="projects" class="wide sep">
-    <a href="/rerent"><img src="/media/rerent_mockup.png" alt="rerent" align="right" style="max-width:600px;"></a>
+    <a href="/rerent"><img src="/media/rerent_mockup.png" class="img_projects" alt="rerent" style="max-width:800px;"></a>
     <p style="margin-top: 1em;">
         <strong>Product Management | Software Development</strong>
     </p>
