--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Home
 <div class="wide" style="display: flex;align-items: center;flex-flow: wrap; justify-content:left;">
     <span class="home-top"></span>
 <!--    <img id="bio-prof-pic" src="/media/profile.jpg">-->
-    <span class="home-title1">hello!  </span>
+    <div class="home-title1">hello!</div>
     <span class="home-title2">I'm Ashley
         <span class="blue" style="font-weight: bold">
             —
@@ -20,6 +20,9 @@ title: Home
 <!--ReRent -->
 <div id="projects" class="wide sep">
     <a href="/rerent"><img src="/media/rerent_mockup.png" class="img_projects" alt="rerent" style="max-width:800px;"></a>
+    <div class="project-title">
+        ReRent
+    </div>
     <p style="margin-top: 1em;">
         <strong>Product Management | Software Development</strong>
     </p>
@@ -34,7 +37,6 @@ title: Home
         <button onclick="window.location.href = 'https://bricebai.com/hivedesk';" class="h6">Read more</button>
         <br>
         <br>
-        <small class="h6"><b class="boldbasier">Tools</b> &nbsp;&nbsp;&nbsp;Figma, Illustrator, FlowMapp<br></small>
     </div>
 
     <div class="two" style="display: flex; align-items: center;">
