--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 layout: default
 title: Home
 ---
-<div class="wide" style="display: flex;align-items: center;flex-flow: wrap; justify-content:left;">
+<!--<div class="wide" style="display: flex; align-items: center; flex-flow: wrap; justify-content:left;">-->
+<div class="wide" style="display: flex; flex-flow: wrap;">
     <span class="home-top"></span>
-<!--    <img id="bio-prof-pic" src="/media/profile.jpg">-->
-    <div class="home-title1">hello!</div>
-    <span class="home-title2">I'm Ashley
-        <span class="blue" style="font-weight: bold">
-            —
-        </span>
-    </span>
+    <img id="bio-prof-pic" src="/media/profile.jpg">
+    <span class="home-title1">hello!</span>
+    <br>
+    <br>
+    <span class="home-title2">I'm Ashley <span class="blue" style="font-weight: bold"> — </span> </span>
     <span class="home-subtitle">developer, researcher, and bioengineering student at Yale. Passionate about using data to build products and promote equity.</span>
     <a href="mailto:ashleyelaineqin@gmail.com" style="margin-left: 6em"><strong>Let's get in touch</strong></a>
     <span class="home-bottom"></span>
@@ -18,31 +17,22 @@ title: Home
 
 
 <!--ReRent -->
-<div id="projects" class="wide sep">
+<div id="projects" class="wide sep" style="margin-top: 1em">
     <a href="/rerent"><img src="/media/rerent_mockup.png" class="img_projects" alt="rerent" style="max-width:800px;"></a>
     <div class="project-title">
         ReRent
     </div>
-    <p style="margin-top: 1em;">
+    <p style="margin-top: 0.5em;">
         <strong>Product Management | Software Development</strong>
+        <strong>Summer 2020 — Present</strong>
+    </p>
+    <p>
+        An internship turned product manager role. Leading a 4-person team to develop an end-to-end hospitality management system focused on helping students maximize their housing by making home-sharing easy.
     </p>
 </div>
 <br>
-<div class="card grid" style="margin-bottom: -24px;">
-    <div class="one mt-3 mb-3" style="padding: 60px 0px;margin: auto auto auto 128px;width: 50%;">
-        <h5>Summer 2020</h5><br>
-        Lorem Ipsum
-        <br>
-        <br>
-        <button onclick="window.location.href = 'https://bricebai.com/hivedesk';" class="h6">Read more</button>
-        <br>
-        <br>
-    </div>
-
-    <div class="two" style="display: flex; align-items: center;">
-        <a href="/rerent"><img src="/media/profile.jpg" alt="rerent"
-                               style="filter: drop-shadow(0px 1px 5px silver);"></a>
-    </div>
-    <br>
-</div>
+<br>
+<button onclick="window.location.href = 'https://bricebai.com/hivedesk';" class="h6">Read more</button>
+<br>
+<br>
 
