--- a/index.html
+++ b/index.html
@@ -9,24 +9,27 @@ title: Home
     <span class="home-title1">hello!</span>
     <br>
     <br>
+    <br>
+    <br>
     <span class="home-title2">I'm Ashley <span class="blue" style="font-weight: bold"> — </span> </span>
     <span class="home-subtitle">developer, researcher, and bioengineering student at Yale. Passionate about using data to build products and promote equity.</span>
-    <a href="mailto:ashleyelaineqin@gmail.com" style="margin-left: 6em"><strong>Let's get in touch</strong></a>
+    <a href="mailto:ashleyelaineqin@gmail.com" style="margin-left: 6.5em">Let's get in touch</a>
     <span class="home-bottom"></span>
 </div>
 
 
 <!--ReRent -->
 <div id="projects" class="wide sep" style="margin-top: 1em">
-    <a href="/rerent"><img src="/media/rerent_mockup.png" class="img_projects" alt="rerent" style="max-width:800px;"></a>
     <div class="project-title">
         ReRent
     </div>
-    <p style="margin-top: 0.5em;">
-        <strong>Product Management | Software Development</strong>
-        <strong>Summer 2020 — Present</strong>
+    <p style="margin-top: 0.5em; font-weight: bold">
+        Product Management | Software Development
+        <br>
+        Summer 2020 — Present
     </p>
-    <p>
+    <img src="/media/rerent_mockup.png" class="img_projects" alt="rerent" style="max-width:800px;">
+    <p style="font-weight: lighter">
         An internship turned product manager role. Leading a 4-person team to develop an end-to-end hospitality management system focused on helping students maximize their housing by making home-sharing easy.
     </p>
 </div>
