adding project descriptions

--- a/index.html
+++ b/index.html
@@ -5,37 +5,67 @@ title: Home
 <!--<div class="wide" style="display: flex; align-items: center; flex-flow: wrap; justify-content:left;">-->
 <div class="wide" style="display: flex; flex-flow: wrap;">
     <span class="home-top"></span>
-    <img id="bio-prof-pic" src="/media/profile.jpg">
     <span class="home-title1">hello!</span>
     <br>
     <br>
     <br>
     <br>
-    <span class="home-title2">I'm Ashley <span class="blue" style="font-weight: bold"> — </span> </span>
+    <span class="home-title2">I'm Ashley <span class="blue"> — </span></span>
+<!--    <img id="bio-prof-pic" src="/media/profile.jpg" align="right">-->
+    <img src="/media/profile.jpg" align="right">
     <span class="home-subtitle">developer, researcher, and bioengineering student at Yale. Passionate about using data to build products and promote equity.</span>
-    <a href="mailto:ashleyelaineqin@gmail.com" style="margin-left: 6.5em">Let's get in touch</a>
+    <a href="mailto:ashleyelaineqin@gmail.com" style="margin-left: 6.7em">Let's get in touch</a>
     <span class="home-bottom"></span>
 </div>
 
 
 <!--ReRent -->
-<div id="projects" class="wide sep" style="margin-top: 1em">
+<br>
+<br>
+<br>
+<div class="wide sep" style="margin-top: 1em">
     <div class="project-title">
         ReRent
     </div>
-    <p style="margin-top: 0.5em; font-weight: bold">
+    <p>
         Product Management | Software Development
         <br>
         Summer 2020 — Present
     </p>
-    <img src="/media/rerent_mockup.png" class="img_projects" alt="rerent" style="max-width:800px;">
-    <p style="font-weight: lighter">
-        An internship turned product manager role. Leading a 4-person team to develop an end-to-end hospitality management system focused on helping students maximize their housing by making home-sharing easy.
+    <img src="/media/rerent_mockup.png" class="img_projects" alt="rerent" style="max-width:900px;">
+    <p class="project-descriptions">
+        A <span class="blue">software engineering</span> internship turned <span class="blue">product manager</span> role. Leading a 4-person team to develop an end-to-end hospitality management system focused on helping students maximize their housing by making home-sharing easy.
+        <button onclick="window.location.href = 'https://bricebai.com/hivedesk';" class="h4">Read more</button>
     </p>
 </div>
+
+
+<!-- YDN Data Desk -->
 <br>
 <br>
-<button onclick="window.location.href = 'https://bricebai.com/hivedesk';" class="h6">Read more</button>
 <br>
-<br>
+<div class="wide sep" style="margin-top: 1em">
+    <div class="project-title">
+        Yale Daily News — Data Analytics
+    </div>
+    <p>
+        Data Science
+        <br>
+        Spring 2020 — Present
+    </p>
+    <p class="project-descriptions">
+        <span class="blue">Data analyst</span> for the Yale Daily News. Extracting key insights and telling stories with data to make information free and accessible for all.
+    </p>
+    <p style="font-size: 200%">
+        The shifting demographic makeup of Yale's athletic teams
+    </p>
+    <img src="/media/ydnheatmap.png" class="img_projects" alt="rerent" style="max-width:800px;">
+    <button onclick="window.location.href = 'http://features.yaledailynews.com/blog/2020/04/24/analysis-a-shifting-demographic-for-storied-yale-crew-international-athletes-elevate-the-elis/';" class="h4">Read more</button>
+    <br>
+    <p style="font-size: 200%">
+        Commencement 2020 — Four Years in Review
+    </p>
+    <img src="/media/ydncomenecment.png" class="img_projects" alt="rerent" style="max-width:800px;">
+    <button onclick="window.location.href = 'https://yaledailynews.com/commencement2020/2020/05/15/yale-class-of-2020-by-the-numbers/';" class="h4">Read more</button>
+</div>
 
