--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@ title: Home
     <br>
     <br>
     <br>
-    <br>
     <span class="home-title2">I'm Ashley <span class="blue"> — </span></span>
 <!--    <img id="bio-prof-pic" src="/media/profile.jpg" align="right">-->
     <img src="/media/profile.jpg" align="right">
@@ -23,7 +22,7 @@ title: Home
 <br>
 <br>
 <br>
-<div class="wide sep" style="margin-top: 1em">
+<div id="projects" class="wide sep" style="margin-top: 1em">
     <div class="project-title">
         ReRent
     </div>
@@ -35,7 +34,7 @@ title: Home
     <img src="/media/rerent_mockup.png" class="img_projects" alt="rerent" style="max-width:900px;">
     <p class="project-descriptions">
         A <span class="blue">software engineering</span> internship turned <span class="blue">product manager</span> role. Leading a 4-person team to develop an end-to-end hospitality management system focused on helping students maximize their housing by making home-sharing easy.
-        <button onclick="window.location.href = 'https://bricebai.com/hivedesk';" class="h4">Read more</button>
+        <button onclick="window.location.href = 'https://bricebai.com/hivedesk';" class="h4">See more</button>
     </p>
 </div>
 
@@ -60,12 +59,12 @@ title: Home
         The shifting demographic makeup of Yale's athletic teams
     </p>
     <img src="/media/ydnheatmap.png" class="img_projects" alt="rerent" style="max-width:800px;">
-    <button onclick="window.location.href = 'http://features.yaledailynews.com/blog/2020/04/24/analysis-a-shifting-demographic-for-storied-yale-crew-international-athletes-elevate-the-elis/';" class="h4">Read more</button>
+    <button onclick="window.location.href = 'http://features.yaledailynews.com/blog/2020/04/24/analysis-a-shifting-demographic-for-storied-yale-crew-international-athletes-elevate-the-elis/';" class="h4">See more</button>
     <br>
     <p style="font-size: 200%">
         Commencement 2020 — Four Years in Review
     </p>
     <img src="/media/ydncomenecment.png" class="img_projects" alt="rerent" style="max-width:800px;">
-    <button onclick="window.location.href = 'https://yaledailynews.com/commencement2020/2020/05/15/yale-class-of-2020-by-the-numbers/';" class="h4">Read more</button>
+    <button onclick="window.location.href = 'https://yaledailynews.com/commencement2020/2020/05/15/yale-class-of-2020-by-the-numbers/';" class="h4">See more</button>
 </div>
 
