--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@ layout: default
 title: Home
 ---
 <!--<div class="wide" style="display: flex; align-items: center; flex-flow: wrap; justify-content:left;">-->
-<div class="wide" style="display: flex; flex-flow: wrap;">
+<div class="wide" style="display: flex;">
     <span class="home-top"></span>
     <span class="home-title1">hello!</span>
     <br>
     <br>
-    <br>
     <span class="home-title2">I'm Ashley <span class="blue"> — </span></span>
-<!--    <img id="bio-prof-pic" src="/media/profile.jpg" align="right">-->
-    <img src="/media/profile.jpg" align="right">
+<!--    <img id="bio-prof-pic" src="/media/profile.jpg" style="justify-content: right">-->
+    <img style="float: right;" alt="" src="/media/profile.jpg">
     <span class="home-subtitle">developer, researcher, and bioengineering student at Yale. Passionate about using data to build products and promote equity.</span>
-    <a href="mailto:ashleyelaineqin@gmail.com" style="margin-left: 6.7em">Let's get in touch</a>
+    <a href="mailto:ashleyelaineqin@gmail.com" style="margin-left: 6.8em">Let's get in touch</a>
     <span class="home-bottom"></span>
 </div>
 
 
 <!--ReRent -->
+<br>
 <br>
 <br>
 <br>
@@ -33,19 +33,18 @@ title: Home
     </p>
     <img src="/media/rerent_mockup.png" class="img_projects" alt="rerent" style="max-width:900px;">
     <p class="project-descriptions">
-        A <span class="blue">software engineering</span> internship turned <span class="blue">product manager</span> role. Leading a 4-person team to develop an end-to-end hospitality management system focused on helping students maximize their housing by making home-sharing easy.
+        A <span class="blue">software engineering</span> internship turned <span class="blue">product manager</span> role. Leading a 4-person team in developing an end-to-end hospitality management system focused on helping students make the most of their housing.
+        <br>
         <button onclick="window.location.href = 'https://bricebai.com/hivedesk';" class="h4">See more</button>
     </p>
-</div>
 
 
-<!-- YDN Data Desk -->
-<br>
-<br>
-<br>
-<div class="wide sep" style="margin-top: 1em">
+    <!-- YDN Data Desk -->
+    <br>
+    <br>
+    <br>
     <div class="project-title">
-        Yale Daily News — Data Analytics
+        Yale Daily News — Data
     </div>
     <p>
         Data Science
@@ -53,18 +52,22 @@ title: Home
         Spring 2020 — Present
     </p>
     <p class="project-descriptions">
-        <span class="blue">Data analyst</span> for the Yale Daily News. Extracting key insights and telling stories with data to make information free and accessible for all.
+        <span class="blue">Data analyst</span> for the Yale Daily News. Extracting key insights and telling stories with data to make knowledge free and accessible for all.
     </p>
-    <p style="font-size: 200%">
+    <br>
+    <p class="project-descriptions">
+        Articles:
+    </p>
+    <li color="blue">
         The shifting demographic makeup of Yale's athletic teams
-    </p>
-    <img src="/media/ydnheatmap.png" class="img_projects" alt="rerent" style="max-width:800px;">
+    </li>
+    <img src="/media/ydnheatmap.png" class="img_projects" alt="rerent" style="max-width:300px;">
     <button onclick="window.location.href = 'http://features.yaledailynews.com/blog/2020/04/24/analysis-a-shifting-demographic-for-storied-yale-crew-international-athletes-elevate-the-elis/';" class="h4">See more</button>
     <br>
-    <p style="font-size: 200%">
-        Commencement 2020 — Four Years in Review
-    </p>
-    <img src="/media/ydncomenecment.png" class="img_projects" alt="rerent" style="max-width:800px;">
+    <li color="blue">
+        Class of 2020: By the numbers
+    </li>
+    <img src="/media/ydncommencement.png" class="img_projects" alt="rerent" style="max-width:500px;">
     <button onclick="window.location.href = 'https://yaledailynews.com/commencement2020/2020/05/15/yale-class-of-2020-by-the-numbers/';" class="h4">See more</button>
 </div>
 
