--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Home
 ---
 <!--<div class="wide" style="display: flex; align-items: center; flex-flow: wrap; justify-content:left;">-->
-<div class="wide" style="display: flex;">
+<div class="wide" style="display: flex; flex-flow: wrap;">
     <span class="home-top"></span>
     <span class="home-title1">hello!</span>
     <br>
@@ -61,7 +61,7 @@ title: Home
     <li color="blue">
         The shifting demographic makeup of Yale's athletic teams
     </li>
-    <img src="/media/ydnheatmap.png" class="img_projects" alt="rerent" style="max-width:300px;">
+    <img src="/media/ydnheatmap.png" class="img_projects" alt="rerent" style="max-width:400px;">
     <button onclick="window.location.href = 'http://features.yaledailynews.com/blog/2020/04/24/analysis-a-shifting-demographic-for-storied-yale-crew-international-athletes-elevate-the-elis/';" class="h4">See more</button>
     <br>
     <li color="blue">
