--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@ title: Home
         <br>
         Summer 2020 — Present
     </p>
-    <img src="/media/rerent_mockup.png" class="img_projects" alt="rerent" style="max-width:900px;">
+    <img src="/media/rerent_mockup.png" class="img_projects" alt="rerent" style="max-width:900px; margin-left: 50vw">
     <p class="project-descriptions">
         A <span class="blue">software engineering</span> internship turned <span class="blue">product manager</span> role. Leading a 4-person team in developing an end-to-end hospitality management system focused on helping students make the most of their housing.
         <br>
         <button onclick="window.location.href = 'https://bricebai.com/hivedesk';" class="h4">See more</button>
     </p>
+</div>
 
-
+<div class="wide sep" style="margin-top: 1em">
     <!-- YDN Data Desk -->
     <br>
     <br>
@@ -52,21 +53,18 @@ title: Home
         Spring 2020 — Present
     </p>
     <p class="project-descriptions">
+        <br>
         <span class="blue">Data analyst</span> for the Yale Daily News. Extracting key insights and telling stories with data to make knowledge free and accessible for all.
     </p>
     <br>
     <p class="project-descriptions">
         Articles:
     </p>
-    <li color="blue">
-        The shifting demographic makeup of Yale's athletic teams
-    </li>
+    <li color="blue"><span>The shifting demographic makeup of Yale's athletic teams</span></li>
     <img src="/media/ydnheatmap.png" class="img_projects" alt="rerent" style="max-width:400px;">
     <button onclick="window.location.href = 'http://features.yaledailynews.com/blog/2020/04/24/analysis-a-shifting-demographic-for-storied-yale-crew-international-athletes-elevate-the-elis/';" class="h4">See more</button>
     <br>
-    <li color="blue">
-        Class of 2020: By the numbers
-    </li>
+    <li color="blue"><span>Class of 2020: By the numbers</span></li>
     <img src="/media/ydncommencement.png" class="img_projects" alt="rerent" style="max-width:500px;">
     <button onclick="window.location.href = 'https://yaledailynews.com/commencement2020/2020/05/15/yale-class-of-2020-by-the-numbers/';" class="h4">See more</button>
 </div>
