--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Home
 ---
 <!--<div class="wide" style="display: flex; align-items: center; flex-flow: wrap; justify-content:left;">-->
-<div class="wide" style="display: flex; flex-flow: wrap;">
+<div class="wide" style="display: flex; flex-flow: wrap; justify-content:right">
     <span class="home-top"></span>
     <span class="home-title1">hello!</span>
     <br>
